--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : @mjzhu__
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
