--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: /publications_list/
+    
+  # - title: "Publications"
+    # url: /publications/
 
   - title: "Talks"
     url: /talks/    
