--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,9 @@ main:
     
 #  - title: "Portfolio"
 #    url: /portfolio/
+
+  - title: "Software"
+    url: /software/
         
   - title: "Blog Posts"
     url: /year-archive/
