--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/mengjia-zhu-1304b5111"
   orcid            : "https://orcid.org/0000-0002-7569-9886"
   pinterest        :
   soundcloud       :
