--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=9fz9eboAAAAJ&hl=en"
-  email            :
+  email            :  "mengjia.zhu@manchester.ac.uk"
   researchgate     : "https://www.researchgate.net/profile/Mengjia-Zhu-2"
   uri              :
   bitbucket        :
