Refactor _config.yml and about.md for clarity and accuracy in descriptions

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Mengjia Zhu"
 title_separator          : "-"
-name                     : &name "Mengjia Zhu"
-description              : &description "Research Fellow at UoL. My current research interests include data-efficient optimization and learning-based control for complex systems with uncertain or unavailable models, with applications in autonomous and safety-critical systems."
+name                     : "Mengjia Zhu"
+description              : "Research Fellow at UoL. My current research interests include data-efficient optimization and learning-based control for complex systems with uncertain or unavailable models, with applications in autonomous and safety-critical systems."
 url                      :  "https://mjzhu-p.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mjzhu-p/mjzhu-p.github.io"
